@@ -1,5 +1,9 @@
 2002-02-21  Bastien Nocera  <hadess@hadess.net>
 
+	* logrtns.c: (isLogFile): don't crash on empty files
+
+2002-02-21  Bastien Nocera  <hadess@hadess.net>
+
 	* actions.c: (edit_action_entry): use non-deprecated calls
 	(and the proper ones in fact)
 	* logview.h, logrtns.c: (ReadPageUp), (ReadPageDown): fix bug on
